Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-grpc.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-grpc.adoc.po
@@ -688,7 +688,7 @@ msgstr ""
 #: upstream/_generated-config/1.11/config/quarkus-grpc.adoc:385
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/1.11/config/quarkus-grpc.adoc:390
