--- a/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-query.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-query.adoc.po
@@ -91,7 +91,7 @@ msgstr ""
 #: upstream/_generated-config/1.11/config/quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-query.adoc:50
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/1.11/config/quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit-hibernate-orm-config-persistence-unit-query.adoc:36
