--- a/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-hibernate-orm-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-hibernate-orm-general-config-items.adoc.po
@@ -376,7 +376,7 @@ msgstr ""
 #: upstream/_generated-config/1.11/config/quarkus-hibernate-orm-general-config-items.adoc:543
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/1.11/config/quarkus-hibernate-orm-general-config-items.adoc:174
