--- a/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-hibernate-orm-hibernate-orm-runtime-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-hibernate-orm-hibernate-orm-runtime-config.adoc.po
@@ -71,7 +71,7 @@ msgstr "string"
 #: upstream/_generated-config/1.11/config/quarkus-hibernate-orm-hibernate-orm-runtime-config.adoc:90
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/1.11/config/quarkus-hibernate-orm-hibernate-orm-runtime-config.adoc:25
