--- a/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-vertx-http.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-vertx-http.adoc.po
@@ -372,7 +372,7 @@ msgstr ""
 #: upstream/_generated-config/1.11/config/quarkus-vertx-http.adoc:130
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/1.11/config/quarkus-vertx-http.adoc:135
