--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-grpc-config-group-config-ssl-server-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-grpc-config-group-config-ssl-server-config.adoc.po
@@ -218,4 +218,4 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-grpc-config-group-config-ssl-server-config.adoc:109
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
