--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-http-http-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-http-http-build-time-config.adoc.po
@@ -300,7 +300,7 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-http-http-build-time-config.adoc:130
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/1.7/config/quarkus-http-http-build-time-config.adoc:135
