--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-security-users-embedded-mp-realm-runtime-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-security-users-embedded-mp-realm-runtime-config.adoc.po
@@ -87,7 +87,7 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-security-users-embedded-mp-realm-runtime-config.adoc:37
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/1.7/config/quarkus-security-users-embedded-mp-realm-runtime-config.adoc:34
