--- a/l10n/po/ja_JP/_generated-config/config/quarkus-all-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-all-config.adoc.po
@@ -14491,7 +14491,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-all-config.adoc:25556
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-all-config.adoc:8112
