--- a/l10n/po/ja_JP/_generated-config/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit.adoc.po
@@ -71,7 +71,7 @@ msgstr "string"
 #: upstream/_generated-config/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit.adoc:90
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit.adoc:25
