--- a/l10n/po/ja_JP/_generated-config/config/quarkus-security-users-embedded-mp-realm-runtime-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-security-users-embedded-mp-realm-runtime-config.adoc.po
@@ -112,7 +112,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-security-users-embedded-mp-realm-runtime-config.adoc:47
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-security-users-embedded-mp-realm-runtime-config.adoc:44
