--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-grpc-config-grpc-configuration.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-grpc-config-grpc-configuration.adoc.po
@@ -647,7 +647,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-grpc-config-grpc-configuration.adoc:362
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-grpc-config-grpc-configuration.adoc:367
