--- a/l10n/po/ja_JP/_versions/1.11/guides/building-my-first-extension.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/building-my-first-extension.adoc.po
@@ -81,7 +81,7 @@ msgstr "Apache Maven {maven-version}"
 #: upstream/_versions/1.11/guides/building-my-first-extension.adoc:33
 #, no-wrap
 msgid "Basic Concepts"
-msgstr ""
+msgstr "基本概念"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/building-my-first-extension.adoc:36
