--- a/l10n/po/ja_JP/_versions/1.11/guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/qute-reference.adoc.po
@@ -927,7 +927,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:423
 #, no-wrap
 msgid "Infix Notation Example"
-msgstr ""
+msgstr "インフィックス表記例"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:429
@@ -946,13 +946,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:433
 msgid "Virtual method parameters can be \"nested\" virtual method invocations."
-msgstr ""
+msgstr "仮想メソッドのパラメーターは、「入れ子」仮想メソッドの呼び出しにすることができます。"
 
 #. type: Block title
 #: upstream/_versions/1.11/guides/qute-reference.adoc:434
 #, no-wrap
 msgid "Nested Virtual Method Example"
-msgstr ""
+msgstr "入れ子になった仮想メソッドの例"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:440
@@ -972,7 +972,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:443
 #, no-wrap
 msgid "Evaluation of `CompletionStage` and `Uni` Objects"
-msgstr ""
+msgstr "`CompletionStage` と `Uni` オブジェクトの評価"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:449
@@ -982,7 +982,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:454
 msgid "A section:"
-msgstr ""
+msgstr "セクションは:"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:456
@@ -992,7 +992,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:457
 msgid "starts with `#`, followed by the name of the section such as `{#if}` and `{#each}`,"
-msgstr ""
+msgstr "`#` で始まり、 `{#if}` や `{#each}` などのセクションの名前が続きます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:458
@@ -1074,7 +1074,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:504
 msgid "It's also possible to access the iteration metadata inside the loop:"
-msgstr ""
+msgstr "ループ内の反復メタデータにアクセスすることも可能です。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:510
@@ -1093,7 +1093,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:514
 msgid "The `for` statement also works with integers, starting from 1. In the example below, considering that `total = 3`:"
-msgstr ""
+msgstr "`for` 文は、1 から始まる整数でも動作します。 以下の例では、 `total = 3` ."
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:520
@@ -1704,7 +1704,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:795
 #, no-wrap
 msgid "Template \"base\""
-msgstr ""
+msgstr "テンプレート「ベース」"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:807
@@ -1735,7 +1735,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:811
 #, no-wrap
 msgid "Template \"detail\""
-msgstr ""
+msgstr "テンプレート「詳細」"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:822
@@ -1770,12 +1770,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:829
 #, no-wrap
 msgid "User-defined Tags"
-msgstr ""
+msgstr "ユーザー定義タグ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:833
 msgid "User-defined tags can be used to include a template and optionally pass some parameters.  Let's suppose we have a template called `itemDetail.html`:"
-msgstr ""
+msgstr "ユーザー定義タグは、テンプレートをインクルードし、オプションでいくつかのパラメーターを渡すために使用することができます。 `itemDetail.html` というテンプレートがあるとします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:840
@@ -1790,12 +1790,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:842
 msgid "`showImage` is a named parameter."
-msgstr ""
+msgstr "`showImage` は名前付きパラメーターです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:843
 msgid "`it` is a special key that is replaced with the first unnamed param of the tag."
-msgstr ""
+msgstr "`it` は、タグの最初の名前のないパラメーターに置き換えられる特別なキーです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:844
@@ -1819,7 +1819,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:855
 msgid "In Quarkus, all files from the `src/main/resources/templates/tags` are registered and monitored automatically!"
-msgstr ""
+msgstr "Quarkusでは、 `src/main/resources/templates/tags` からのファイルはすべて登録され、自動的に監視されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:857
@@ -1855,7 +1855,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:873
 #, no-wrap
 msgid "Rendering Output"
-msgstr ""
+msgstr "レンダリング出力"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:879
@@ -1884,7 +1884,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:892
 msgid "Register a callback that is executed once the rendering is finished."
-msgstr ""
+msgstr "レンダリング終了後に実行されるコールバックを登録します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:897
@@ -2026,7 +2026,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:963
 msgid "Inject the configured `Engine` instance."
-msgstr ""
+msgstr "設定された `Engine` インスタンスを注入します。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/qute-reference.adoc:964
@@ -2133,7 +2133,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1014
 #, no-wrap
 msgid "Parameter Declaration Example"
-msgstr ""
+msgstr "パラメーター宣言の例"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1029
@@ -2222,12 +2222,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1062
 #, no-wrap
 msgid "Type-safe Templates"
-msgstr ""
+msgstr "タイプセーフテンプレート"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1065
 msgid "You can also declare your templates in your Java code.  If using <<resteasy_integration,templates in JAX-RS resources>>, you can rely on the following convention:"
-msgstr ""
+msgstr "また、Java コードでテンプレートを宣言することもできます。 link:#resteasy_integration[JAX-RSリソースでテンプレート] を使用する場合は、以下の規約に従うことができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1069
@@ -2590,7 +2590,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1241
 #, no-wrap
 msgid "Namespace Extension Methods"
-msgstr ""
+msgstr "名前空間拡張メソッド"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1246
@@ -2601,7 +2601,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1247
 #, no-wrap
 msgid "Namespace Extension Method Example"
-msgstr ""
+msgstr "名前空間拡張メソッド例"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1252
@@ -2633,7 +2633,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1264
 msgid "These extension methods can be used as follows."
-msgstr ""
+msgstr "これらの拡張メソッドは、以下のように使用することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1269
@@ -2646,12 +2646,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1271
 msgid "The output is `Hello world!`"
-msgstr ""
+msgstr "出力は `Hello world!` です"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1272
 msgid "The output is `olleh`"
-msgstr ""
+msgstr "出力は `olleh` です"
 
 #. type: Title ====
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1273
@@ -2662,7 +2662,7 @@ msgstr "組み込みテンプレートエクステンション"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1276
 msgid "Quarkus provides a set of built-in extension methods."
-msgstr ""
+msgstr "Quarkusは、組み込みの拡張メソッドのセットを提供しています。"
 
 #. type: Title =====
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1277
@@ -2673,7 +2673,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1280
 msgid "`keys` or `keySet`: Returns a Set view of the keys contained in a map"
-msgstr ""
+msgstr "`keys` または `keySet` : マップに含まれるキーのセットビューを返します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1281
@@ -2683,7 +2683,7 @@ msgstr "`{#for key in map.keySet}`"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1283
 msgid "`values`: Returns a Collection view of the values contained in a map"
-msgstr ""
+msgstr "`values` : マップに含まれる値のコレクションビューを返します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1284
@@ -2693,7 +2693,7 @@ msgstr "`{#for value in map.values}`"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1286
 msgid "`size`: Returns the number of key-value mappings in a map"
-msgstr ""
+msgstr "`size` : マップ内のキーと値の対応付けの個数を返します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1287
@@ -2703,7 +2703,7 @@ msgstr "`{map.size}`"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1289
 msgid "`isEmpty`: Returns true if a map contains no key-value mappings"
-msgstr ""
+msgstr "`isEmpty` : マップにキーと値のマッピングが含まれていない場合に true を返します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1290
@@ -2713,7 +2713,7 @@ msgstr "`{#if map.isEmpty}`"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1292
 msgid "`get(key)`: Returns the value to which the specified key is mapped"
-msgstr ""
+msgstr "`get(key)` : 指定したキーがマッピングされた値を返します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1293
@@ -2755,12 +2755,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1306
 msgid "`mod`: Modulo operation"
-msgstr ""
+msgstr "`mod` : モデューロ演算"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1307
 msgid "`{#if counter.mod(5) == 0}`"
-msgstr ""
+msgstr "`{#if counter.mod(5) == 0}`"
 
 #. type: Title =====
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1308
@@ -2797,7 +2797,7 @@ msgstr "時間"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1319
 msgid "`format(pattern)`: Formats temporal objects from the `java.time` package"
-msgstr ""
+msgstr "`format(pattern)` : `java.time` パッケージの一時オブジェクトをフォーマットします。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1320
@@ -2807,7 +2807,7 @@ msgstr "`{dateTime.format('d MMM uuuu')}`"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1322
 msgid "`format(pattern,locale)`: Formats temporal objects from the `java.time` package"
-msgstr ""
+msgstr "`format(pattern,locale)` : `java.time` パッケージの一時オブジェクトをフォーマットします。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1323
@@ -2817,7 +2817,7 @@ msgstr "`{dateTime.format('d MMM uuuu',myLocale)}`"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1325
 msgid "`format(pattern,locale,timeZone)`: Formats temporal objects from the `java.time` package"
-msgstr ""
+msgstr "`format(pattern,locale,timeZone)` : `java.time` パッケージの一時オブジェクトをフォーマットします。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1326
@@ -2827,7 +2827,7 @@ msgstr "`{dateTime.format('d MMM uuuu',myLocale,myTimeZoneId)}`"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1328
 msgid "`time:format(dateTime,pattern)`: Formats temporal objects from the `java.time` package, `java.util.Date`, `java.util.Calendar` and `java.lang.Number`"
-msgstr ""
+msgstr "`time:format(dateTime,pattern)` : `java.time` パッケージ、 `java.util.Date` 、 `java.util.Calendar` 、 `java.lang.Number` の一時オブジェクトをフォーマットします。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1329
@@ -2837,7 +2837,7 @@ msgstr "`{time:format(myDate,'d MMM uuuu')}`"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1331
 msgid "`time:format(dateTime,pattern,locale)`: Formats temporal objects from the `java.time` package, `java.util.Date`, `java.util.Calendar` and `java.lang.Number`"
-msgstr ""
+msgstr "`time:format(dateTime,pattern,locale)` : `java.time` パッケージ、 `java.util.Date` 、 `java.util.Calendar` 、 `java.lang.Number`の一時オブジェクトをフォーマットします。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1332
@@ -2847,7 +2847,7 @@ msgstr "`{time:format(myDate,'d MMM uuuu', myLocale)}`"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1334
 msgid "`time:format(dateTime,pattern,locale,timeZone)`: Formats temporal objects from the `java.time` package, `java.util.Date`, `java.util.Calendar` and `java.lang.Number`"
-msgstr ""
+msgstr "`time:format(dateTime,pattern,locale,timeZone)` : `java.time` パッケージ、 `java.util.Date` 、 `java.util.Calendar` 、 `java.lang.Number` の一時オブジェクトをフォーマットします。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1335
@@ -2863,12 +2863,12 @@ msgstr "@TemplateData"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1341
 msgid "A value resolver is automatically generated for a type annotated with `@TemplateData`.  This allows Quarkus to avoid using reflection to access the data at runtime."
-msgstr ""
+msgstr "値リゾルバは、 `@TemplateData` でアノテーションされた型に対して自動的に生成されます。これにより、Quarkusでは、実行時にデータにアクセスするためのリフレクションの使用を避けることができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1343
 msgid "Non-public members, constructors, static initializers, static, synthetic and void methods are always ignored."
-msgstr ""
+msgstr "非publicのメンバー、コンストラクタ、静的イニシャライザ、静的メソッド、合成メソッド、ボイドメソッドは常に無視されます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1350
@@ -2900,7 +2900,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1364
 msgid "Any instance of `Item` can be used directly in the template:"
-msgstr ""
+msgstr "`Item` の任意のインスタンスをテンプレート内で直接使用することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1370
@@ -2914,12 +2914,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1372
 msgid "`items` is resolved to a list of `org.acme.Item` instances."
-msgstr ""
+msgstr "`items` は `org.acme.Item` インスタンスのリストに解決されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1375
 msgid "Furthermore, `@TemplateData.properties()` and `@TemplateData.ignore()` can be used to fine-tune the generated resolver.  Finally, it is also possible to specify the \"target\" of the annotation - this could be useful for third-party classes not controlled by the application:"
-msgstr ""
+msgstr "さらに、 `@TemplateData.properties()` と `@TemplateData.ignore()` を使用して、生成されるリゾルバを微調整することができます。最後に、アノテーションの「ターゲット」を指定することも可能です。これは、アプリケーションによって管理されないサードパーティーのクラスに便利です。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1381
@@ -2942,7 +2942,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1397
 msgid "The generated value resolver knows how to invoke the `BigDecimal.setScale()` method."
-msgstr ""
+msgstr "生成された値リゾルバは、 `BigDecimal.setScale()` メソッドを呼び出す方法を知っています。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1399
@@ -2953,7 +2953,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1403
 msgid "If you want to use Qute in your JAX-RS application, then depending on which JAX-RS stack you are using, you'll need to register the proper extension first.  If you are using the traditional `quakus-resteasy` extension, then in your `pom.xml` file, add:"
-msgstr ""
+msgstr "JAX-RSアプリケーションでQuteを使用したい場合、使用しているJAX-RSスタックによっては、まず適切なエクステンションを登録する必要があります。トラディショナルな `quakus-resteasy` のエクステンションを使用している場合は、 以下を `pom.xml` ファイルに追加してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1410
@@ -2968,7 +2968,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1413
 msgid "If instead you are using RESTEasy Reactive via the `quarkus-resteasy-reactive` extension, then in your `pom.xml` file, add:"
-msgstr ""
+msgstr "代わりに `quarkus-resteasy-reactive` エクステンションを介して RESTEasy Reactive を使用している場合は、 次を `pom.xml` ファイルに追加してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1420
@@ -3123,7 +3123,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1497
 msgid "Unlike with `@Inject` the templates obtained via `RestTemplate` are not validated, i.e. the build does not fail if a template does not exist."
-msgstr ""
+msgstr "`@Inject` とは異なり、 `RestTemplate` 経由で取得したテンプレートは検証されません。即ち、テンプレートが存在しなくてもビルドは失敗しません。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1498
@@ -3134,24 +3134,24 @@ msgstr "開発モード"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1501
 msgid "In the development mode, all files located in `src/main/resources/templates` are watched for changes and modifications are immediately visible."
-msgstr ""
+msgstr "開発モードでは、 `src/main/resources/templates` にあるすべてのファイルの変更が監視され、変更はすぐに表示されます。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1502
 #, no-wrap
 msgid "Type-safe Message Bundles"
-msgstr ""
+msgstr "タイプセーフメッセージバンドル"
 
 #. type: Title ====
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1504
 #, no-wrap
 msgid "Basic Concepts"
-msgstr ""
+msgstr "基本概念"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1510
 msgid "The basic idea is that every message is potentially a very simple template.  In order to prevent type errors a message is defined as an annotated method of a *message bundle interface*.  Quarkus generates the *message bundle implementation* at build time.  Subsequently, the bundles can be used at runtime:"
-msgstr ""
+msgstr "基本的な考え方は、すべてのメッセージは潜在的に非常にシンプルなテンプレートであるということです。型エラーを防ぐために、メッセージは *メッセージバンドルインターフェース* のアノテーションメソッドとして定義されます。Quarkusは、ビルド時に *メッセージバンドルの実装を* 生成します。そのため、実行時にバンドルを使用することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1512
@@ -3161,7 +3161,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1513
 msgid "Injected in your beans via `@Inject`; e.g. `@Inject AppMessages`"
-msgstr ""
+msgstr "`@Inject` であなたのBeanに注入されます。 例: `@Inject AppMessages`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1514
@@ -3179,12 +3179,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1521
 msgid "`msg` is the default namespace."
-msgstr ""
+msgstr "`msg` がデフォルトの名前空間です。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1522
 msgid "`hello_name` is the message key."
-msgstr ""
+msgstr "`hello_name` がメッセージキーです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1523
@@ -3371,7 +3371,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1599
 #, no-wrap
 msgid "Localized File Example - `msg_de.properties`"
-msgstr ""
+msgstr "ローカライズされたファイルの例 - `msg_de.properties`"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/qute-reference.adoc:1603
