--- a/l10n/po/ja_JP/_versions/1.11/guides/security-oauth2.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-oauth2.adoc.po
@@ -315,7 +315,7 @@ msgstr "リクエストにトークンを提供していないので、エンド
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-oauth2.adoc:163
 msgid "user name is anonymous"
-msgstr ""
+msgstr "ユーザー名は anonymous (匿名) です。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-oauth2.adoc:164
