--- a/l10n/po/ja_JP/_versions/1.7/guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/qute-reference.adoc.po
@@ -865,7 +865,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:375
 #, no-wrap
 msgid "Infix Notation Example"
-msgstr ""
+msgstr "インフィックス表記例"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:381
@@ -884,13 +884,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:385
 msgid "Virtual method parameters can be \"nested\" virtual method invocations."
-msgstr ""
+msgstr "仮想メソッドのパラメーターは、「入れ子」仮想メソッドの呼び出しにすることができます。"
 
 #. type: Block title
 #: upstream/_versions/1.7/guides/qute-reference.adoc:386
 #, no-wrap
 msgid "Nested Virtual Method Example"
-msgstr ""
+msgstr "入れ子になった仮想メソッドの例"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:392
@@ -915,7 +915,7 @@ msgstr "セクション"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:400
 msgid "A section:"
-msgstr ""
+msgstr "セクションは:"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:402
@@ -925,7 +925,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:403
 msgid "starts with `#`, followed by the name of the section such as `{#if}` and `{#each}`,"
-msgstr ""
+msgstr "`#` で始まり、 `{#if}` や `{#each}` などのセクションの名前が続きます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:404
@@ -1002,7 +1002,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:450
 msgid "It's also possible to access the iteration metadata inside the loop:"
-msgstr ""
+msgstr "ループ内の反復メタデータにアクセスすることも可能です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:458
@@ -1012,7 +1012,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:460
 msgid "The `for` statement also works with integers, starting from 1. In the example below, considering that `total = 3`:"
-msgstr ""
+msgstr "`for` 文は、1 から始まる整数でも動作します。 以下の例では、 `total = 3` ."
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:466
@@ -1399,7 +1399,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:631
 #, no-wrap
 msgid "Template \"base\""
-msgstr ""
+msgstr "テンプレート「ベース」"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:643
@@ -1430,7 +1430,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:647
 #, no-wrap
 msgid "Template \"detail\""
-msgstr ""
+msgstr "テンプレート「詳細」"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:658
@@ -1465,12 +1465,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:665
 #, no-wrap
 msgid "User-defined Tags"
-msgstr ""
+msgstr "ユーザー定義タグ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:669
 msgid "User-defined tags can be used to include a template and optionally pass some parameters.  Let's suppose we have a template called `itemDetail.html`:"
-msgstr ""
+msgstr "ユーザー定義タグは、テンプレートをインクルードし、オプションでいくつかのパラメーターを渡すために使用することができます。 `itemDetail.html` というテンプレートがあるとします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:676
@@ -1485,12 +1485,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:678
 msgid "`showImage` is a named parameter."
-msgstr ""
+msgstr "`showImage` は名前付きパラメーターです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:679
 msgid "`it` is a special key that is replaced with the first unnamed param of the tag."
-msgstr ""
+msgstr "`it` は、タグの最初の名前のないパラメーターに置き換えられる特別なキーです。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:680
@@ -1514,7 +1514,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:691
 msgid "In Quarkus, all files from the `src/main/resources/templates/tags` are registered and monitored automatically!"
-msgstr ""
+msgstr "Quarkusでは、 `src/main/resources/templates/tags` からのファイルはすべて登録され、自動的に監視されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:693
@@ -1647,7 +1647,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:755
 msgid "Inject the configured `Engine` instance."
-msgstr ""
+msgstr "設定された `Engine` インスタンスを注入します。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/qute-reference.adoc:756
@@ -2013,7 +2013,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:939
 #, no-wrap
 msgid "Namespace Extension Method Example"
-msgstr ""
+msgstr "名前空間拡張メソッド例"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:944
@@ -2045,7 +2045,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:956
 msgid "These extension methods can be used as follows."
-msgstr ""
+msgstr "これらの拡張メソッドは、以下のように使用することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:961
@@ -2058,12 +2058,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:963
 msgid "The output is `Hello world!`"
-msgstr ""
+msgstr "出力は `Hello world!` です"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:964
 msgid "The output is `olleh`"
-msgstr ""
+msgstr "出力は `olleh` です"
 
 #. type: Title ====
 #: upstream/_versions/1.7/guides/qute-reference.adoc:965
@@ -2074,7 +2074,7 @@ msgstr "組み込みテンプレートエクステンション"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:968
 msgid "Quarkus provides a set of built-in extension methods."
-msgstr ""
+msgstr "Quarkusは、組み込みの拡張メソッドのセットを提供しています。"
 
 #. type: Title =====
 #: upstream/_versions/1.7/guides/qute-reference.adoc:969
@@ -2085,7 +2085,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:972
 msgid "`keys` or `keySet`: Returns a Set view of the keys contained in a map"
-msgstr ""
+msgstr "`keys` または `keySet` : マップに含まれるキーのセットビューを返します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:973
@@ -2095,7 +2095,7 @@ msgstr "`{#for key in map.keySet}`"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:975
 msgid "`values`: Returns a Collection view of the values contained in a map"
-msgstr ""
+msgstr "`values` : マップに含まれる値のコレクションビューを返します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:976
@@ -2105,7 +2105,7 @@ msgstr "`{#for value in map.values}`"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:978
 msgid "`size`: Returns the number of key-value mappings in a map"
-msgstr ""
+msgstr "`size` : マップ内のキーと値の対応付けの個数を返します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:979
@@ -2115,7 +2115,7 @@ msgstr "`{map.size}`"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:981
 msgid "`isEmpty`: Returns true if a map contains no key-value mappings"
-msgstr ""
+msgstr "`isEmpty` : マップにキーと値のマッピングが含まれていない場合に true を返します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:982
@@ -2125,7 +2125,7 @@ msgstr "`{#if map.isEmpty}`"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:984
 msgid "`get(key)`: Returns the value to which the specified key is mapped"
-msgstr ""
+msgstr "`get(key)` : 指定したキーがマッピングされた値を返します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:985
@@ -2167,12 +2167,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:998
 msgid "`mod`: Modulo operation"
-msgstr ""
+msgstr "`mod` : モデューロ演算"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:999
 msgid "`{#if counter.mod(5) == 0}`"
-msgstr ""
+msgstr "`{#if counter.mod(5) == 0}`"
 
 #. type: Title =====
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1000
@@ -2209,12 +2209,12 @@ msgstr "@TemplateData"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1013
 msgid "A value resolver is automatically generated for a type annotated with `@TemplateData`.  This allows Quarkus to avoid using reflection to access the data at runtime."
-msgstr ""
+msgstr "値リゾルバは、 `@TemplateData` でアノテーションされた型に対して自動的に生成されます。これにより、Quarkusでは、実行時にデータにアクセスするためのリフレクションの使用を避けることができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1015
 msgid "Non-public members, constructors, static initializers, static, synthetic and void methods are always ignored."
-msgstr ""
+msgstr "非publicのメンバー、コンストラクタ、静的イニシャライザ、静的メソッド、合成メソッド、ボイドメソッドは常に無視されます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1022
@@ -2246,7 +2246,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1036
 msgid "Any instance of `Item` can be used directly in the template:"
-msgstr ""
+msgstr "`Item` の任意のインスタンスをテンプレート内で直接使用することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1042
@@ -2260,12 +2260,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1044
 msgid "`items` is resolved to a list of `org.acme.Item` instances."
-msgstr ""
+msgstr "`items` は `org.acme.Item` インスタンスのリストに解決されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1047
 msgid "Furthermore, `@TemplateData.properties()` and `@TemplateData.ignore()` can be used to fine-tune the generated resolver.  Finally, it is also possible to specify the \"target\" of the annotation - this could be useful for third-party classes not controlled by the application:"
-msgstr ""
+msgstr "さらに、 `@TemplateData.properties()` と `@TemplateData.ignore()` を使用して、生成されるリゾルバを微調整することができます。最後に、アノテーションの「ターゲット」を指定することも可能です。これは、アプリケーションによって管理されないサードパーティーのクラスに便利です。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1053
@@ -2288,7 +2288,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1069
 msgid "The generated value resolver knows how to invoke the `BigDecimal.setScale()` method."
-msgstr ""
+msgstr "生成された値リゾルバは、 `BigDecimal.setScale()` メソッドを呼び出す方法を知っています。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1071
@@ -2441,24 +2441,24 @@ msgstr "開発モード"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1143
 msgid "In the development mode, all files located in `src/main/resources/templates` are watched for changes and modifications are immediately visible."
-msgstr ""
+msgstr "開発モードでは、 `src/main/resources/templates` にあるすべてのファイルの変更が監視され、変更はすぐに表示されます。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1144
 #, no-wrap
 msgid "Type-safe Message Bundles"
-msgstr ""
+msgstr "タイプセーフメッセージバンドル"
 
 #. type: Title ====
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1146
 #, no-wrap
 msgid "Basic Concepts"
-msgstr ""
+msgstr "基本概念"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1152
 msgid "The basic idea is that every message is potentially a very simple template.  In order to prevent type errors a message is defined as an annotated method of a *message bundle interface*.  Quarkus generates the *message bundle implementation* at build time.  Subsequently, the bundles can be used at runtime:"
-msgstr ""
+msgstr "基本的な考え方は、すべてのメッセージは潜在的に非常にシンプルなテンプレートであるということです。型エラーを防ぐために、メッセージは *メッセージバンドルインターフェース* のアノテーションメソッドとして定義されます。Quarkusは、ビルド時に *メッセージバンドルの実装を* 生成します。そのため、実行時にバンドルを使用することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1154
@@ -2468,7 +2468,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1155
 msgid "Injected in your beans via `@Inject`; e.g. `@Inject AppMessages`"
-msgstr ""
+msgstr "`@Inject` であなたのBeanに注入されます。 例: `@Inject AppMessages`"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1156
@@ -2651,7 +2651,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1231
 #, no-wrap
 msgid "Localized File Example - `msg_de.properties`"
-msgstr ""
+msgstr "ローカライズされたファイルの例 - `msg_de.properties`"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/qute-reference.adoc:1235
