--- a/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-grpc-config-group-config-grpc-server-configuration.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-grpc-config-group-config-grpc-server-configuration.adoc.po
@@ -310,7 +310,7 @@ msgstr ""
 #: upstream/_generated-config/1.11/config/quarkus-grpc-config-group-config-grpc-server-configuration.adoc:156
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/1.11/config/quarkus-grpc-config-group-config-grpc-server-configuration.adoc:161
