--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-elytron-security.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-elytron-security.adoc.po
@@ -97,7 +97,7 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-elytron-security.adoc:38
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/1.7/config/quarkus-elytron-security.adoc:34
