--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-grpc-config-group-config-grpc-server-configuration.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-grpc-config-group-config-grpc-server-configuration.adoc.po
@@ -297,7 +297,7 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-grpc-config-group-config-grpc-server-configuration.adoc:147
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/1.7/config/quarkus-grpc-config-group-config-grpc-server-configuration.adoc:152
