--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-grpc-config-grpc-configuration.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-grpc-config-grpc-configuration.adoc.po
@@ -632,7 +632,7 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-grpc-config-grpc-configuration.adoc:353
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/1.7/config/quarkus-grpc-config-grpc-configuration.adoc:358
