--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-grpc-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-grpc-general-config-items.adoc.po
@@ -632,7 +632,7 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-grpc-general-config-items.adoc:353
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/1.7/config/quarkus-grpc-general-config-items.adoc:358
