--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-grpc.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-grpc.adoc.po
@@ -675,7 +675,7 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-grpc.adoc:376
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/1.7/config/quarkus-grpc.adoc:381
