--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-hibernate-orm-config-group-hibernate-orm-config-hibernate-orm-config-database.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-hibernate-orm-config-group-hibernate-orm-config-hibernate-orm-config-database.adoc.po
@@ -63,7 +63,7 @@ msgstr "string"
 #: upstream/_generated-config/1.7/config/quarkus-hibernate-orm-config-group-hibernate-orm-config-hibernate-orm-config-database.adoc:20
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/1.7/config/quarkus-hibernate-orm-config-group-hibernate-orm-config-hibernate-orm-config-database.adoc:25
