--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-hibernate-orm-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-hibernate-orm-general-config-items.adoc.po
@@ -106,7 +106,7 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-hibernate-orm-general-config-items.adoc:45
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/1.7/config/quarkus-hibernate-orm-general-config-items.adoc:50
