--- a/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.7/config/quarkus-hibernate-orm.adoc.po
@@ -343,7 +343,7 @@ msgstr ""
 #: upstream/_generated-config/1.7/config/quarkus-hibernate-orm.adoc:190
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/1.7/config/quarkus-hibernate-orm.adoc:195
