--- a/l10n/po/ja_JP/_generated-config/config/quarkus-elytron-security.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-elytron-security.adoc.po
@@ -122,7 +122,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-elytron-security.adoc:48
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-elytron-security.adoc:44
