--- a/l10n/po/ja_JP/_generated-config/config/quarkus-grpc-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-grpc-general-config-items.adoc.po
@@ -645,7 +645,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-grpc-general-config-items.adoc:362
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-grpc-general-config-items.adoc:367
