--- a/l10n/po/ja_JP/_generated-config/config/quarkus-hibernate-orm-hibernate-orm-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-hibernate-orm-hibernate-orm-config.adoc.po
@@ -417,7 +417,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-hibernate-orm-hibernate-orm-config.adoc:561
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-hibernate-orm-hibernate-orm-config.adoc:192
