--- a/l10n/po/ja_JP/_generated-config/config/quarkus-http-http-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-http-http-build-time-config.adoc.po
@@ -379,7 +379,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-http-http-build-time-config.adoc:166
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-http-http-build-time-config.adoc:171
