--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-grpc.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-grpc.adoc.po
@@ -690,7 +690,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-grpc.adoc:385
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-grpc.adoc:390
