--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit.adoc.po
@@ -369,7 +369,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit.adoc:543
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-hibernate-orm-config-group-hibernate-orm-config-persistence-unit.adoc:174
