--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-vertx-http.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-vertx-http.adoc.po
@@ -479,7 +479,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-vertx-http.adoc:175
 #, no-wrap
 msgid "`none`"
-msgstr ""
+msgstr "`none`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-vertx-http.adoc:180
